return custom object for GET workflow version alias
